@@ -1,5 +1,6 @@
 15 September 2016: Wouter
 	- Fix 883: error for duplicate local zone entry.
+	- Test for openssl init_crypto and init_ssl functions.
 
 15 September 2016: Ralph
 	- fix potential memory leak in daemon/remote.c and nullpointer
